--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,12 @@
   box-sizing: border-box;
 }
 
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 /* Remove default margin */
 body,
 h1,
